# hrm-backend

./: .env  .gitignore  main.py  pyproject.toml  real_profile.db
src/: api.py
src/core/: config.py  db.py  enums.py  errors.py  extensions.py  logging.py  pagination.py
src/middlewares/: correlation.py  exception.py  time.py
src/migrations/: env.py
src/migrations/versions/: 0e041d52f539_.py  2903e218fad5_.py  3dfbbfa8d589_.py  4ab7f33c38b7_.py  50d03151f484_.py  f382139dd00f_.py  f83ba365df8f_.py
src/models/: __init__.py  auth.py  belbin.py  citizenship.py  oauth.py  resume.py
src/schemas/: __init__.py  auth.py  belbin.py  citezenship.py  oauth.py  resume.py
src/services/admin/: views.py
src/services/auth/: flows.py  service.py  tasks.py  utils.py  views.py
src/services/belbin/: service.py  views.py
src/services/resume/: flows.py  service.py  views.py
src/services/users/: views.py
src/utils/: jwt.py  time.py
