[tool.poetry]
name = "hrm"
version = "0.1.0"
description = ""
authors = ["CrazzzyyFoxx <craazzzyyfoxx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
loguru = "^0.7.2"
pydantic-settings = {extras = ["dotenv"], version = "^2.2.1"}
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"
passlib = "^1.7.4"
bcrypt = "4.1.2"
orjson = "^3.10.0"
setuptools = "^69.2.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
alembic = "^1.13.1"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pydantic-extra-types = "^2.6.0"
phonenumbers = "^8.13.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
